--- a/angular.json
+++ b/angular.json
@@ -19,13 +19,16 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "assets",
+                "output": "/assets/"
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@vscode/codicons/dist/codicon.css"
             ]
           },
           "configurations": {
