--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@tsparticles/angular": "^3.0.0",
+    "@tsparticles/engine": "^3.9.1",
     "@vscode/codicons": "^0.0.40",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
