--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
               {
                 "glob": "**/*",
                 "input": "assets",
-                "output": "/assets/"
+                "output": "./assets/"
               }
             ],
             "styles": [
